--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
-      rel="stylesheet"
-    />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="google" content="notranslate">
     <title>Лента</title>
   </head>
-  <body>
+  <body class="notranslate">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/app/main.tsx"></script>
