--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <meta name="google" content="notranslate">
-    <title>Лента</title>
+    <title>Лента Спутник</title>
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
